# scout-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scout/: __init__.py  _client.py  _errors.py  _pagination.py  _version.py
scout/resources/: __init__.py  _base.py  chat.py  company.py  extract.py  jobs.py  lists.py  monitors.py  page.py  products.py  search.py  site.py
tests/: test_e2e.py
