[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scout-sdk"
version = "0.1.0"
description = "Official Python SDK for the Scout web-intelligence API (zero dependencies)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Scout AI Labs" }]
keywords = [
    "scout",
    "web-scraping",
    "search-api",
    "web-intelligence",
    "scrape",
    "crawl",
    "extract",
    "company-enrichment",
    "sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
# Zero runtime dependencies - built on the Python standard library.
dependencies = []

[project.urls]
Homepage = "https://usescout.sh"
Repository = "https://github.com/Scout-AI-Labs/scout-python"
Issues = "https://github.com/Scout-AI-Labs/scout-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["scout"]
